@@ -1,3 +1,5 @@
+	* added feature to make asserts log to a file instead of breaking the process
+	  (production asserts)
 	* optimized disk I/O cache clearing
 	* added feature to ask a torrent if it needs to save its resume data or not
 	* added setting to ignore file modification time when loading resume files
